# llm_client

./: .gitignore  .gitmodules  PLAYWRIGHT.md  README.md  app.py  build.py  build.sh  build_app  check_secrets.py  llm_client_example.py  main.py  main_cli.py  main_gui.py  pikafish.py  pyproject.toml  run_app.py  run_server.py  test.py  test_pikafish.py  uv_publish
llm_client/: __init__.py  llm_client.py  prompt.py  tool.py
llm_client_app/: __init__.py  app.py
llm_client_tools/: js_runtime.py  mcp.py  mouse.py  pikafish.py  playwright_browser.py  screen.py  stockfish.py
llm_client_window/: __init__.py  window.py
mlx_engine/: __init__.py  compat.py  engine.py  generate.py  server.py
prompts/: tier1_explicit.txt  tier2_guided.txt  tier3_concise.txt  tier4_minimal.txt
tools/: gui.py  js_runtime.py  keyboard.py  mouse.py  pikafish.py  screen.py  tool.py
tq_mlx_engine/: __init__.py  compat.py  engine.py  prefix_dict.py  server.py
tq_mlx_engine/turboquant_mlx/: __init__.py  adaptive.py  cache.py  fused_attention.py  hybrid_attention.py  hybrid_cache.py  metal.py  metal_kernels_v4.py  packing.py  patch.py  quantizer.py  sparse_v.py  v_only_cache.py
turboquant_mlx/: README.md  __init__.py  adaptive.py  cache.py  flash_attention.py  fused_attention.py  hybrid_attention.py  hybrid_cache.py  metal_kernels_v4.py  patch.py  v_only_cache.py
