[project]
name = "llm-gui-client"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.36.0",
]

[project.optional-dependencies]
tools = [
    "mini-racer>=0.14.1",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pyscreeze>=1.0.1",
]
mcp = [
    "mcp>=1.0.0",
]
gui = [
    "llm-gui-client[tools]",
    "pyside6>=6.10.0",
    "python-dotenv>=1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["llm_client", "llm_client_tools", "llm_client_window"]

[tool.hatch.version]
path = "llm_client/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
