[project]
name = "llm-gui-client"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.36.0",
]

[project.optional-dependencies]
tools = [
    "mini-racer>=0.14.1",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pyscreeze>=1.0.1",
]
mcp = [
    "mcp>=1.0.0",
]
web = [
    "playwright>=1.55.0",
]
server = [
    "fastapi>=0.115.0",
    "mlx-lm>=0.20.0",
    "moka-py>=0.3.0",
    "uvicorn[standard]>=0.30.0",
]
gui = [
    "llm-gui-client[tools,web,mcp]",
    "pyside6>=6.10.0",
    "python-dotenv>=1.2.2",
]

all = [
    "llm-gui-client[tools,web,mcp,gui,server]",
]

[tool.hatch.build.targets.wheel]
packages = ["llm_client", "llm_client_app", "llm_client_tools", "mlx_engine"]

[tool.hatch.version]
path = "llm_client/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
